[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchdiag"
version = "0.1.0"
description = "PyTorch model health diagnostics — gradient checks, dead neuron detection, training verification. Built from an SRE perspective."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Aditya Mehra", email = "your-email@example.com"},
]
keywords = ["pytorch", "debugging", "diagnostics", "machine-learning", "deep-learning", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/AddyM/torchdiag"
Issues = "https://github.com/AddyM/torchdiag/issues"
